# OrcaRL2

./: .gitignore  .gitmodules  Ideas.md  LICENSE  README.md  requirements.txt
action/driver_odrive/: CMakeLists.txt  package.xml
action/driver_odrive/example/: socket_can_receiver_node.cpp
action/driver_odrive/include/driver_odrive/: diffbot_system.hpp  visibility_control.h
action/driver_odrive/launch/: test_odrive_control.launch.py
action/driver_odrive/src/: diffbot_system.cpp  test.cpp  test.py  test2.cpp  test_odrive_control.cpp  test_odrive_control.py  test_socketcan.cpp
action/driver_zlac8030l/: CMakeLists.txt  package.xml
action/driver_zlac8030l/config/: zlac8030l.yaml
action/driver_zlac8030l/msg/: State.msg
action/driver_zlac8030l/src/: differential_drive.py  driver_node.py
action/joystick_control/: CMakeLists.txt  package.xml
action/joystick_control/config/: joystick.dbc
action/joystick_control/launch/: start.launch.py
action/joystick_control/src/: joystick_control_node.py  joystick_dbc_gen.py
action/orca_control/: CMakeLists.txt  package.xml
action/orca_control/config/: driver_odrive.yaml
action/orca_control/description/: depth_camera.xacro  ros2_control.xacro
action/orca_control/launch/: joystick.launch.py  launch_legacy_robot.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
action/ros2_humanoid_tf/: .gitlab-ci.yml  package.xml  setup.cfg  setup.py
action/ros2_humanoid_tf/humanoid_tf/: com.py
action/ros2_ik_walk/: README.md
action/ros2_ik_walk/ik_walk/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  correction_values.txt  package.xml
action/ros2_ik_walk/ik_walk/config/: example.yml
action/ros2_ik_walk/ik_walk/include/ik_walk/: ik_walk.hpp  visibility_control.h
action/ros2_ik_walk/ik_walk/src/: ik_walk.cpp  ik_walk_node.cpp
action/ros2_ik_walk/ik_walk_msgs/: CMakeLists.txt  package.xml
cognition/: README.md  config.yml  domain.yml  gpt4free.py  test.md  test.py
cognition/.rasa/cache/: cache.db
cognition/actions/: actions.py
cognition/config/: bodyaction.yaml
cognition/data/: rules.yml  stories.yml
cognition/database/: output.json  test.json
cognition/input_app/: input.py
cognition/internet_voice/: example_assistant.py  example_robot.py  example_servers.py  test_run.py  test_telebot.py  test_telegram.py  text_comm_rasa.py
cognition/json_data/: my_json copy.json  my_json.json
cognition/memory_control/: CMakeLists.txt  package.xml
cognition/memory_control/src/: memory_control.py
cognition/memory_control/test/: local_ip.py  test.py
cognition/rasa_app/: config.yml  credentials.yml  domain.yml  endpoints.yml  example_client.py  example_servers.py  input.py  telegram.py
cognition/rasa_app/data/: nlu.yml
cognition/task_publisher/: CMakeLists.txt  package.xml
cognition/task_publisher/launch/: rasa_task_publisher.launch.py
cognition/task_publisher/src/: task_publisher.py
localization/aruco_detect/launch/: aruco_detect.launch.py
localization/orca_rtabmap/: CMakeLists.txt  package.xml
localization/orca_rtabmap/launch/: orca_rtabmap.launch.py  orca_rtabmap.launch_slam.py  orca_rtabmap_full.launch.py  orca_rtabmap_slam.launch.py  orca_rtabmap_slam_full.launch.py  orca_rtabmap_slam_rgbd.launch.py  orca_rtabmap_slam_scan.launch.py
navigation/: README.md
navigation/orca_adapter/: package.xml  setup.cfg  setup.py
navigation/orca_adapter/launch/: fleet_adapter.launch.xml
navigation/orca_adapter/orca_adapter/: RobotCommandHandle.py
navigation/orca_free_fleet_client/: CMakeLists.txt  package.xml
navigation/orca_free_fleet_client/launch/: client.launch.xml  fake_client.launch.xml
navigation/orca_free_fleet_client/src/: client_node.cpp
navigation/orca_free_fleet_ros2/orca_free_fleet_client_ros2/: package.xml
navigation/orca_free_fleet_ros2/orca_free_fleet_server_ros2/: package.xml
navigation/orca_navigation/: CMakeLists.txt  package.xml
navigation/orca_navigation/2d_map/: my_map.pgm  my_map.yaml  new_map.pgm  new_map.yaml  new_map2.pgm  new_map2.yaml  new_map4.pgm  new_map4.yaml  new_map5.pgm  new_map5.yaml
navigation/orca_navigation/3d_map/: office.pcd
navigation/orca_navigation/config/: orca_nano.yaml
navigation/orca_navigation/example/: cartographer.launch.py  turtlebot3_world.launch.py
navigation/orca_navigation/launch/: cartographer.launch.py  map_saver.launch.py  navigation2.launch.py  occupancy_grid.launch.py  test_navigation2.launch.py  turtlebot3_world.launch.py
navigation/orca_navigation/map/: map.pgm  map.yaml
navigation/orca_navigation/rviz/: nav.rviz
navigation/orca_navigation/script/: openrmf_convert.py  pgm2png.py
navigation/orca_navigation/scripts/: openrmf_convert.py  pgm2png.py
navigation/orca_navigation/src/: nav_control.py
navigation/orca_rmf/: CMakeLists.txt  package.xml
operation/orca_free_fleet_server/: CMakeLists.txt  package.xml
operation/orca_free_fleet_server/launch/: server.launch.xml
operation/orca_free_fleet_server/src/: ServerNode.hpp  ServerNodeConfig.hpp  main.cpp  utilities.hpp
operation/orca_rmf_adapter/: package.xml  setup.cfg  setup.py
operation/orca_rmf_core/: CMakeLists.txt  package.xml
operation/shell_scripts/: map_builder.sh  map_updater.sh
perception/: README.md
perception/points_concat_filter/: CMakeLists.txt  package.xml
perception/points_concat_filter/include/: points_concat_async_node.h
perception/points_concat_filter/src/: main.cpp  points_concat_async_node.cpp
perception/ros2_bold_vision/: README.md
perception/ros2_bold_vision/bold_vision/: CMakeLists.txt  package.xml
perception/ros2_bold_vision/bold_vision/include/bold_vision/: bold_vision.hpp  visibility_control.h
perception/ros2_bold_vision/bold_vision/src/: bold_vision.cpp  bold_vision_node.cpp
simulation/: README.md
simulation/ros2_boldbot/gazebo_ros_pose_publisher/: CMakeLists.txt  package.xml
simulation/ros2_boldbot/gazebo_ros_pose_publisher/src/: pose_publisher_plugin.cpp
simulation/rover_simulation/: CMakeLists.txt  package.xml
simulation/simulation/: CMakeLists.txt  package.xml
(+240 files in other folders)
